--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <h1>JASSIRA</h1>
+    <ul>
+        <li><a href="#">illustrations</a></li> 
+        <li><a href="#">animations</a></li> 
+        <li><a href="#">photography</a></li> 
+        <li><a href="#">about</a></li> 
+    </ul>
 </body>
 </html>
