--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <li><a href="#">photography</a></li> 
         <li><a href="#">about</a></li> 
     </ul>
+    <p>hello</p>
 </body>
 </html>
