--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
     
-    <h1>JASSIRA</h1>
-    <ul>
-        <li><a href="#">illustrations</a></li> 
-        <li><a href="#">animations</a></li> 
-        <li><a href="#">photography</a></li> 
-        <li><a href="#">about</a></li> 
-    </ul>
+    <div class = "header">
+        <h1>JASSIRA</h1>
+        <ul>
+            <li><a href="#">illustrations</a></li> 
+            <li><a href="#">animations</a></li> 
+            <li><a href="#">photography</a></li> 
+            <li><a href="#">about</a></li> 
+        </ul>
+    </div>
 </body>
 </html>
