--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     
     <div class = "header">
-        <h1>JASSIRA</h1>
+        <div class = "title">
+            <h1> <b>JASSIRA</b> </h1>
+        </div>
         <ul>
             <li><a href="#">illustrations</a></li> 
             <li><a href="#">animations</a></li> 
