--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <div class = "header">
         <div class = "title">
-            <h1> <b>JASSIRA</b> </h1>
+            <h1> <a href="index.html">JASSIRA</a> </h1>
         </div>
         <ul>
             <li><a href="#">illustrations</a></li> 
