--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
     <div class = "header">
-        <div class = "title">
+
+        <div class = title>
             <h1> <a href="index.html">JASSIRA</a> </h1>
         </div>
+
         <ul>
             <li><a href="#">illustrations</a></li> 
             <li><a href="#">animations</a></li> 
@@ -18,5 +21,6 @@
             <li><a href="#">about</a></li> 
         </ul>
     </div>
+    
 </body>
 </html>
