--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         </div>
 
         <ul>
-            <li><a href="#">works</a></li> 
+            <li><a href="#">illustrations</a></li> 
+            <li><a href="#">animations</a></li> 
+            <li><a href="#">photography</a></li> 
             <li><a href="#">about</a></li> 
             <li><a href="#">resume</a></li> 
         </ul>
