--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <title>JASSIRA</title>
     <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
     
-    <div class = "header">
-
-        <div class = title>
-            <h1> <a href="index.html">JASSIRA</a> </h1>
-        </div>
-
-        <ul>
-            <li><a href="#">illustrations</a></li> 
-            <li><a href="#">animations</a></li> 
-            <li><a href="#">photography</a></li> 
-            <li><a href="#">about</a></li> 
-            <li><a href="#">resume</a></li> 
-        </ul>
+    <div class = "title">
+        <p> <a href ="index.html"> JASSIRA </a> </p
     </div>
+
+    <div class="image-container">
+        <div class="image" id="image1"></div>
+        <div class="image" id="image2"></div>
+        <div class="image" id="image3"></div>
+        <div class="image" id="image4"></div>
+        <div class="image" id="image5"></div>
+        <div class="image" id="image6"></div>
+      </div>
     
 </body>
 </html>
