--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
     </div>
 
     <div class="image-container">
-        <div class="image" id="image1"></div>
-        <div class="image" id="image2"></div>
-        <div class="image" id="image3"></div>
-        <div class="image" id="image4"></div>
-        <div class="image" id="image5"></div>
-        <div class="image" id="image6"></div>
-      </div>
+        <div class="row">
+          <div class="image" id="image1"></div>
+          <div class="image" id="image2"></div>
+          <div class="image" id="image3"></div>
+        </div>
+        <div class="row">
+          <div class="image" id="image4"></div>
+          <div class="image" id="image5"></div>
+          <div class="image" id="image6"></div>
+        </div>
+    </div>
     
 </body>
 </html>
