--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
           <div class="image" id="image6"></div>
         </div>
     </div>
+
+    <div class = "footer">
+        <p>© jassira de almeida 2024</p>
+    </div>
     
 </body>
 </html>
