--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
 
     <div class="image-container">
         <div class="row">
-          <div class="image" id="image1"></div>
-          <div class="image" id="image2"></div>
-          <div class="image" id="image3"></div>
+          <a href="illustration1.html"><div class="image" id="image1"></div></a>
+          <a href="illustration2.html"><div class="image" id="image2"></div></a>
+          <a href="illustration3.html"><div class="image" id="image3"></div></a>
         </div>
         <div class="row">
-          <div class="image" id="image4"></div>
-          <div class="image" id="image5"></div>
-          <div class="image" id="image6"></div>
+          <a href="illustration4.html"><div class="image" id="image4"></div></a>
+          <a href="illustration5.html"><div class="image" id="image5"></div></a>
+          <a href="illustration6.html"><div class="image" id="image6"></div></a>
         </div>
-    </div>
+      </div>
+      
 
     <div class = "footer">
         <p>© jassira de almeida 2024</p>
