--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <div class="image-container">
         <div class="row">
-          <a href="illustration1.html"><div class="image" id="image1"></div></a>
-          <a href="illustration2.html"><div class="image" id="image2"></div></a>
-          <a href="illustration3.html"><div class="image" id="image3"></div></a>
+          <a href="illustration1.html"><div class="image" id="image1"></div>illustrations</a>
+          <a href="illustration2.html"><div class="image" id="image2"></div>animations</a>
+          <a href="illustration3.html"><div class="image" id="image3"></div>photography</a>
         </div>
         <div class="row">
-          <a href="illustration4.html"><div class="image" id="image4"></div></a>
-          <a href="illustration5.html"><div class="image" id="image5"></div></a>
-          <a href="illustration6.html"><div class="image" id="image6"></div></a>
+          <a href="illustration4.html"><div class="image" id="image4"></div>about</a>
+          <a href="illustration5.html"><div class="image" id="image5"></div>resume</a>
+          <a href="illustration6.html"><div class="image" id="image6"></div>contact</a>
         </div>
       </div>
       
