--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="image-container">
         <div class="row">
-          <a href="illustration1.html"><div class="image" id="image1"></div>illustrations</a>
+          <a href="illustration.html"><div class="image" id="image1"></div>illustrations</a>
           <a href="illustration2.html"><div class="image" id="image2"></div>animations</a>
           <a href="illustration3.html"><div class="image" id="image3"></div>photography</a>
         </div>
