--- a/illustration.html
+++ b/illustration.html
@@ -21,19 +21,19 @@
             <div class="dropdown">
                 <a href="#">works</a>
                 <div class="dropdown-content">
-                    <a href="#">illustration</a>
-                    <a href="#">animation</a>
-                    <a href="#">photography</a>
+                    <a href="illustration.html">illustration</a>
+                    <a href="animation.html">animation</a>
+                    <a href="photography.html">photography</a>
                 </div>
             </div>
-            <a href="#">about</a>
+            <a href="about.html">about</a>
             <a href="#">resume</a>
-            <a href="#">contact</a>
+            <a href="contact.html">contact</a>
         </div>
 
     </div>    
 
-    
+
     
     <div class = "indfooter">
         <p>© jassira de almeida 2024</p>
