--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="image-container">
         <div class="row">
           <a href="illustration.html"><div class="image" id="image1"></div>illustrations</a>
-          <a href="illustration2.html"><div class="image" id="image2"></div>animations</a>
-          <a href="illustration3.html"><div class="image" id="image3"></div>photography</a>
+          <a href="animation.html"><div class="image" id="image2"></div>animations</a>
+          <a href="photography.html"><div class="image" id="image3"></div>photography</a>
         </div>
         <div class="row">
-          <a href="illustration4.html"><div class="image" id="image4"></div>about</a>
-          <a href="illustration5.html"><div class="image" id="image5"></div>resume</a>
-          <a href="illustration6.html"><div class="image" id="image6"></div>contact</a>
+          <a href="about.html"><div class="image" id="image4"></div>about</a>
+          <a href="#"><div class="image" id="image5"></div>resume</a>
+          <a href="contact.html"><div class="image" id="image6"></div>contact</a>
         </div>
       </div>
       
