--- a/illustration.html
+++ b/illustration.html
@@ -26,6 +26,7 @@
                     <a href="photography.html">photography</a>
                 </div>
             </div>
+
             <a href="about.html">about</a>
             <a href="#">resume</a>
             <a href="contact.html">contact</a>
@@ -33,8 +34,24 @@
 
     </div>    
 
-
     
+    <div class="gallery">
+        <img src="landing/hover2.jpg" alt="Image 1">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        <img src="landing/hover2.jpg" alt="Image 2">
+        
+        <!-- Add more images as needed -->
+    </div>
+
     <div class = "indfooter">
         <p>© jassira de almeida 2024</p>
     </div>
