adding images now

--- a/illustration.html
+++ b/illustration.html
@@ -36,19 +36,11 @@
 
     
     <div class="gallery">
-        <img src="landing/hover2.jpg" alt="Image 1">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        <img src="landing/hover2.jpg" alt="Image 2">
-        
+        <img src="illustrations/01_JD2021,monochromeportrait1.JPG">
+        <img src="illustrations/02_JD2021,monochromeportrait2.JPG">
+        <img src="illustrations/02_JD2021,monochromeportrait2.JPG">
+        <img src="illustrations/02_JD2021,monochromeportrait2.JPG">
+
         <!-- Add more images as needed -->
     </div>
 
