--- a/illustration.html
+++ b/illustration.html
@@ -7,6 +7,7 @@
     <title>illustration - jas</title>
     <link rel="stylesheet" href="styles.css">
 
+
 </head>
 
 <body>
@@ -38,15 +39,22 @@
     <div class="gallery">
         <img src="illustrations/01_JD2021,monochromeportrait1.JPG">
         <img src="illustrations/02_JD2021,monochromeportrait2.JPG">
-        <img src="illustrations/02_JD2021,monochromeportrait2.JPG">
-        <img src="illustrations/02_JD2021,monochromeportrait2.JPG">
+        <img src="illustrations/04_JD2022_mominjamaica.JPG">
+        <img src="illustrations/05_JD2022_Self Portrait.jpg">
 
         <!-- Add more images as needed -->
+    </div>
+    
+    <div class="lightbox" id="lightbox">
+        <span class="close" id="close">&times;</span>
+        <img class="lightbox-content" id="lightbox-img" src="">
     </div>
 
     <div class = "indfooter">
         <p>© jassira de almeida 2024</p>
     </div>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
