--- a/illustration.html
+++ b/illustration.html
@@ -35,8 +35,10 @@
 
     </div>    
 
-    <h1>Illustrations</h1>
-
+    <div class = "indheader">
+        <p>Illustrations</p>
+    </div>
+    
     <div class="rows">
         <div class="columns">
             <img src="illustrations/01_JD2021,monochromeportrait1.JPG" onclick="openLightbox('illustrations/01_JD2021,monochromeportrait1.JPG');">
