--- a/illustration.html
+++ b/illustration.html
@@ -36,31 +36,43 @@
     </div>    
 
     <div class = "indheader">
-        <p>Illustrations</p>
+        <p>illustrations</p>
     </div>
-    
+
     <div class="rows">
         <div class="columns">
             <img src="illustrations/01_JD2021,monochromeportrait1.JPG" onclick="openLightbox('illustrations/01_JD2021,monochromeportrait1.JPG');">
             <img src="illustrations/02_JD2021,monochromeportrait2.JPG" onclick="openLightbox('illustrations/02_JD2021,monochromeportrait2.JPG');">
             <img src="illustrations/04_JD2022_mominjamaica.JPG" onclick="openLightbox('illustrations/04_JD2022_mominjamaica.JPG');">
             <img src="illustrations/05_JD2022_Self Portrait.jpg" onclick="openLightbox('illustrations/05_JD2022_Self Portrait.jpg');">
+
+            <img src="illustrations/IMG_2217.jpg" onclick="openLightbox('illustrations/IMG_2217.jpg');">
+            <img src="illustrations/IMG_2219 (2021_10_15 17_19_51 UTC) (2).jpg" onclick="openLightbox('illustrations/IMG_2219 (2021_10_15 17_19_51 UTC) (2).jpg');">
+            <img src="illustrations/IMG_2223 (2).jpg" onclick="openLightbox('illustrations/IMG_2223 (2).jpg');">
+            <img src="illustrations/IMG_2257.JPG" onclick="openLightbox('illustrations/IMG_2257.JPG');">
         </div>
         <div class="columns">
             <img src="illustrations/780ECDC4-60AE-4446-9991-865633AA1B02.jpg" onclick="openLightbox('illustrations/780ECDC4-60AE-4446-9991-865633AA1B02.jpg');">
             <img src="illustrations/20210408_161945705_001.jpg" onclick="openLightbox('illustrations/20210408_161945705_001.jpg');">
             <img src="illustrations/clover drawings.png" onclick="openLightbox('illustrations/clover drawings.png');">
             <img src="illustrations/digital painting-fairy.png" onclick="openLightbox('illustrations/digital painting-fairy.png');">
+
+            <img src="illustrations/IMG_2276.JPG" onclick="openLightbox('illustrations/IMG_2276.JPG');">
+            <img src="illustrations/IMG_2295.JPG" onclick="openLightbox('illustrations/IMG_2295.JPG');">
+            <img src="illustrations/IMG_2310.JPG" onclick="openLightbox('illustrations/IMG_2310.JPG');">
+            <img src="illustrations/IMG_2705.JPG" onclick="openLightbox('illustrations/IMG_2705.JPG');">
         </div>
         <div class="columns">
             <img src="illustrations/IMG_1040 (2021_10_15 17_19_51 UTC).jpg" onclick="openLightbox('illustrations/IMG_1040 (2021_10_15 17_19_51 UTC).jpg');">
             <img src="illustrations/IMG_1076.JPG" onclick="openLightbox('illustrations/IMG_1076.JPG');">
             <img src="illustrations/IMG_1077.JPG" onclick="openLightbox('illustrations/IMG_1077.JPG');">
+            <img src="illustrations/IMG_1089.JPG" onclick="openLightbox('illustrations/IMG_1089.JPG');">
         </div>
         <div class="columns">
-            <img src="illustrations/IMG_1040 (2021_10_15 17_19_51 UTC).jpg" onclick="openLightbox('illustrations/IMG_1040 (2021_10_15 17_19_51 UTC).jpg');">
-            <img src="illustrations/IMG_1076.JPG" onclick="openLightbox('illustrations/IMG_1076.JPG');">
-            <img src="illustrations/IMG_1077.JPG" onclick="openLightbox('illustrations/IMG_1077.JPG');">
+            <img src="illustrations/IMG_1090.JPG" onclick="openLightbox('illustrations/IMG_1090.JPG');">
+            <img src="illustrations/IMG_1093.JPG" onclick="openLightbox('illustrations/IMG_1093.JPG');">
+            <img src="illustrations/IMG_1094.JPG" onclick="openLightbox('illustrations/IMG_1094.JPG');">
+            <img src="illustrations/IMG_1857.JPG" onclick="openLightbox('illustrations/IMG_1857.JPG');">
         </div>
     </div>
     
