updated allll pics

--- a/illustration.html
+++ b/illustration.html
@@ -78,9 +78,24 @@
 
    <script src="script.js"></script>
 
-    <div class = "indfooter">
-        <p>© jassira de almeida 2024</p>
+   <div class="indfooter">
+        <p class="leftfooter">© jassira de almeida 2024</p>
+        
+        <div class="rightfooter">
+            <p><a href="illustration.html">illustration</a></p>
+            <p><a href="animation.html">animation</a></p>
+            <p><a href="photography.html">photography</a></p>
+        </div>
+
+        <div class="rightfooter">
+            <p><a href="about.html">about</a></p>
+            <p><a href="#">resume</a></p>
+            <p><a href="contact.html">contact</a></p>
+        </div>
     </div>
+
+
+    <div style="clear: both;"></div>
     
 </body>
 </html>
