--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JASSIRA</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JASSIRA</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href= "pfpfornow.png" type="image/x-icon">
 
 </head>
 
