--- a/photography.html
+++ b/photography.html
@@ -4,9 +4,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>illustration - jas</title>
+    <title>photography - jas</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="icon" href= "pfpfornow.png" type="image/x-icon">
 
 </head>
 
@@ -22,8 +22,8 @@
             <div class="dropdown">
                 <a href="#">works</a>
                 <div class="dropdown-content">
-                    <a href="illustration.html">illustration</a>
-                    <a href="animation.html">animation</a>
+                    <a href="illustration.html">illustrations</a>
+                    <a href="animation.html">animations</a>
                     <a href="photography.html">photography</a>
                 </div>
             </div>
@@ -43,8 +43,8 @@
         <p class="leftfooter">© jassira de almeida 2024</p>
         
         <div class="rightfooter">
-            <p><a href="illustration.html">illustration</a></p>
-            <p><a href="animation.html">animation</a></p>
+            <p><a href="illustration.html">illustrations</a></p>
+            <p><a href="animation.html">animations</a></p>
             <p><a href="photography.html">photography</a></p>
         </div>
 
@@ -52,6 +52,7 @@
             <p><a href="about.html">about</a></p>
             <p><a href="#">resume</a></p>
             <p><a href="contact.html">contact</a></p>
+            <p><a href="index.html">home</a></p>
         </div>
     </div>
 
